testsuite/tests/backpack/should_fail/T20489.stderr
[1 of 3] Processing sig
  [1 of 1] Compiling Sig[sig]         ( sig/Sig.hsig, nothing )
[2 of 3] Processing impl
  Instantiating impl
  [1 of 1] Compiling Impl             ( impl/Impl.hs, T20489.out/impl/Impl.o )
[3 of 3] Processing main
  Instantiating main
  [1 of 1] Including sig[Sig=impl:Impl]
    Instantiating sig[Sig=impl:Impl]
    [1 of 1] Compiling Sig[sig]         ( sig/Sig.hsig, T20489.out/sig/sig-Absk5cIXTXe6UYhGMYGber/Sig.o )

T20489.bkp:2:3: error:
    • No instance for (GHC.Show.Show A)
        arising when attempting to show that
        instance [safe] GHC.Show.Show A -- Defined at T20489.bkp:4:14
        is provided by ‘impl:Impl’
        (maybe you haven't applied a function to enough arguments?)
    • while checking that impl:Impl implements signature Sig in sig[Sig=impl:Impl]
